# FINAL_MCP_SERVER

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  RENDER_DEPLOY_GUIDE.md  claude_desktop_config.json  docker-compose.yml  fetcher.py  parser.py  pyproject.toml  render.yaml  requirements.txt  setup.bat  setup.sh
src/mcp_webscraper/: __init__.py  server.py
src/mcp_webscraper/tools/: news.py
